--- a/index.html
+++ b/index.html
@@ -7,5 +7,21 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
   </head>
   
+  <body>
+    <!-- Header -->
+    <header>
+        <h1>Geon Kang</h1>
+        <nav>
+          <ul>
+            <li><a href="#AboutMe">About Me</a></li>
+            <li><a href="#Work">Work</a></li>
+            <li><a href="#Contact">Contact Me</a></li>
+            <li><a href="#">Resume</a></li>
+          </ul>
+        </nav>
+    </header>
+    <!-- Body -->
+    
+    
   </body>
 </html>
