adding AboutMe and Work(Testing) to index.html file

--- a/index.html
+++ b/index.html
@@ -22,6 +22,33 @@
     </header>
     <!-- Body -->
     
-    
+    <main>
+      <div class="portfolio_pic"></div>
+      <div class="flexDisplay">
+          <aside><h2 id="AboutMe">About Me</h2></aside>        
+          <content>
+              <p>Meet Geon Kang, a true maverick when it comes to creative expression. With an unyielding passion for pushing artistic boundaries, Geon has established himself as an innovator in the world of design.</p>
+              <p>Geon's artistic journey began at a young age, where he discovered his love for visual storytelling through various mediums. With a keen eye for detail and a deep understanding of aesthetics, Geon's designs effortlessly blend form and function, captivating audiences with their ingenuity. </p>
+              <p>What sets Geon apart is his fearless approach to experimentation. He fearlessly ventures into uncharted territories, unafraid to challenge conventions and redefine what is possible. Whether he's creating striking visual identities, immersive digital experiences, or thought-provoking installations, Geon's work pushes the boundaries of creativity and leaves a lasting impact on those who encounter it.</p>
+              <p>Dive into Geon Kang's portfolio, and prepare to be captivated by a world where imagination knows no limits and artistic expression reigns supreme. Each piece is a testament to Geon's unwavering dedication to his craft and his ability to create awe-inspiring experiences that resonate deeply with viewers. Get ready to embark on an extraordinary journey through the mind of a true creative maverick.</p>
+          </content>
+      </div>
+      <div class="flexDisplay">
+          <aside><h2 id="Work">Work</h2></aside>        
+          <content>
+            <div class="portfolio_pic"></div>
+            <div class="flexDisplay">
+              <div class="portfolio_pic"></div>
+              <div class="portfolio_pic"></div>
+            </div>
+            <div class="flexDisplay">
+              <div class="portfolio_pic"></div>
+              <div class="portfolio_pic"></div>
+            </div>
+          </content>
+      </div>
+  </main>
+
+  
   </body>
 </html>
