adding Contact information to the footer in index.html file

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
             </div>
           </content>
       </div>
+
+      <footer>
+        <h2 id="Contact">Contact</h2>
+        <nav>
+          <ul>
+            <li><a href="tel:858-241-1239">858.241.1239</a></li>
+            <li><a href="mailto:kanggeon216@gmail.com">kanggeon216@gmail.com</a></li>
+            <li><a href="https://github.com/kanggeon123">Github</a></li>
+          </ul>
+        </nav>
+      </footer>    
   </main>
 
   
